# ft_transcendence

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  transcendence
.github/workflows/: main.yml
api_gateway/: Dockerfile  ft_http-0.1-py3-none-any.whl  requirements.txt  setup.sh
api_gateway/api_gateway/: db.sqlite3
api_gateway/api_gateway/api_gateway/: settings.py
api_gateway/libs/: ft_requests-0.1-py3-none-any.whl
ft_http/: Makefile  README.md  build_and_deploy.sh  cancel_deployement.sh  pyproject.toml  setup.py
ft_http/ft_http/: Response.py  fthttp.py  http_requests.py
ft_http/ft_http.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ft_i18n/: build_and_deploy.sh  pyproject.toml  setup.py
ft_i18n/ft_i18n/: __init__.py  api.py  fti18n.py  i18n.py
ft_i18n/ft_i18n/locale/: en.json
ft_i18n/libs/: ft_requests-0.1-py3-none-any.whl
ft_i18n/scripts/: build_and_deploy.sh  remove_deployment.sh
ft_requests/: README.md  build_and_deploy.sh  pyproject.toml  remove_deployment.sh
ft_requests/ft_requests/: Response.py  __init__.py  api.py  exceptions.py  ftrequests.py  models.py  utils.py
ft_requests/scripts/: build_and_deploy.sh  remove_deployment.sh
i18n_service/: Dockerfile  requirements.txt  setup.sh
i18n_service/i18n_service/: db.sqlite3  manage.py
i18n_service/i18n_service/i18n_service/: asgi.py  settings.py  urls.py  wsgi.py
libs/: Dockerfile  cleanup_libs.sh  deploy_libs.sh
libs/built_wheels/: ft_i18n-0.1-py3-none-any.whl  ft_requests-0.1-py3-none-any.whl
libs/container_scripts/: build.sh  cleanup.sh
libs/ft_i18n/: build.sh  setup.py
libs/ft_requests/: build.sh
pong_service/: Dockerfile  requirements.txt  setup.sh
pong_service/libs/: ft_i18n-0.1-py3-none-any.whl  ft_requests-0.1-py3-none-any.whl
ssl_certs/: selfsigned.crt  selfsigned.key
users_service/: Dockerfile  requirements.txt  setup.sh
users_service/libs/: ft_i18n-0.1-py3-none-any.whl  ft_requests-0.1-py3-none-any.whl
website/: Dockerfile  setup.sh
website/nginx/: default.conf
website/src/: index.html
websocket_server/: Dockerfile  requirements.txt  setup.sh
websocket_server/libs/: ft_requests-0.1-py3-none-any.whl
websocket_server/websocket_server/: db.sqlite3
(+264 files in other folders)
