[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_i18n"
version = "0.1"
dependencies = []
description = "A Python library to use the 'i18n_service' translation service."
authors = [
    {name = "ElloWorld", email = "contact@elloworld.dev" }
]

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
[tool.setuptools.packages.find]
where = ["."]
namespaces = false
