[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_requests"
version = "0.1"
dependencies = []
description = "An HTTP client utility library for ft_transcendence, using the http.client module of the standard Python library."
authors = [
    {name = "ElloWorld", email = "contact@elloworld.dev" }
]

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
[tool.setuptools.packages.find]
where = ["."]
namespaces = false
