[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_requests"
version = "0.1"
dependencies = []
description = "A simplified 'requests' clone, built with http.client from Python's standard library, allowing easy migration by replacing requests with ft_requests."
authors = [
    {name = "ElloWorld", email = "contact@elloworld.dev" }
]

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
[tool.setuptools.packages.find]
where = ["."]
namespaces = false
